--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.bootcdn.net/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet"> 
     <title><%= htmlWebpackPlugin.options.title %></title>
     <style type="text/css">
-      
+      a{text-decoration: none;}
     </style>
   </head>
   <body>
