--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,15 @@
     <style type="text/css">
       a{text-decoration: none;}
     </style>
+    <!-- 高德地图 -->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, shrink-to-fit=no">
   </head>
   <body>
-    <noscript>
+    <!-- 高德地图 -->
+    <script type="text/javascript" src="https://webapi.amap.com/subway?v=1.0&amp;key=04a74fe10631c7c20b602ed6625aa39d&amp;callback=cbk"></script>
+    <!-- <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+    </noscript> -->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
